fix: white space on landing page

--- a/lucuberate-client/src/App.css
+++ b/lucuberate-client/src/App.css
@@ -49,9 +49,10 @@
 /* ------------------------------- Parent Containers */ 
 
 body, html, #root, .app {
-  min-height: 100vh;
+  min-height: calc(100vh + 40px);
   overflow-x: hidden;
 }
+
 
 .container-row {
   display: -webkit-box;
@@ -81,14 +82,11 @@ body, html, #root, .app {
           justify-content: flex-start;
   color: var(--text-color);
   background: var(--background-main);
-  height: 100%;
+
 }
 
 .nav-bar {
-  z-index: 4;
-  height: 50px;
   width: 100%;
-  /* position: absolute; */
   color: var(--background-main);
   background-color: var(--border-color);
   -webkit-box-pack: justify;
@@ -113,8 +111,9 @@ body, html, #root, .app {
   -webkit-box-flex: 4;
       -ms-flex: 4;
           flex: 4;
-  /* height: 100%; */
+  height: 100%;
   width: 100%; 
+  align-items: stretch;
   background-image: url('./images/stars.png');
 }
 
@@ -125,7 +124,7 @@ body, html, #root, .app {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .instructions {
@@ -133,16 +132,14 @@ body, html, #root, .app {
 }
 
 .cube-list-ctrl {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   background-color: var(--background-main);
   border-right: 8px solid var(--border-color);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-          height: 100vh;
-          padding-bottom: 30px;
+          display: flex;
+          bottom: 0;
+          max-height: 100vh;
 }
 
 .cube-header {
@@ -156,9 +153,6 @@ body, html, #root, .app {
 }
 
 .cube-list {
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -184,14 +178,15 @@ body, html, #root, .app {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 20px;
-  
+  height: auto;
 }
 
 /* ----------------------------- Form Pages */
 
 .form-container{
   display: inline-block;
-  padding-top: 20px;
+  padding: 20px 0;
+  width: 100%;
 }
 
 .cube-form {
@@ -825,8 +820,12 @@ input[type="radio"]:checked + label {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 5px;
     margin: 20px;
+    height: 60%;
   }
 
   /* -------------------------- Cube Show Page */
